# ai-latex-cv-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  job.sample.txt  job.txt  pyproject.toml  requirements.txt
config/: project.docker.example.yaml  project.example.yaml  project.yaml
cv-template/: awesome-cv.cls  cv.tex
cv-template/cv/: additionalinformation.tex  cert_and_trainings.tex  committees.tex  education.tex  experience.tex  projects.tex  references.tex  skills.tex  summary.tex
prompts/: rewrite_sections.md
src/ai_latex_cv_builder/: __main__.py  ai_writer.py  cli.py  config.py  latex.py  pipeline.py
